--- a/bot/standalone-frontend/base.html
+++ b/bot/standalone-frontend/base.html
@@ -12,11 +12,11 @@
         <div class="chatbox__support">
             <div class="chatbox__header">
                 <div class="chatbox__image--header">
-                    <img src="https://img.icons8.com/color/48/000000/circled-user-female-skin-type-5--v1.png" alt="image">
+                    <img src="static/images/logo.png" alt="image">
                 </div>
                 <div class="chatbox__content--header">
-                    <h4 class="chatbox__heading--header">Chat support</h4>
-                    <p class="chatbox__description--header">Hi. My name is Thierry. How can I help you?</p>
+                    <h4 class="chatbox__heading--header">Thierry</h4>
+                        <p class="chatbox__description--header">Votre assistant de santé virtuel</p>
                 </div>
             </div>
             <div class="chatbox__messages">
